[package]
name = "minimap2-homopolymer-decompression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.41.0"
clap = {version = "3.2.5", features = ["derive"]}
crossbeam = "0.8.1"
serde = "1.0.137"
cbor = "0.4.1"