[package]
name = "minimap2-homopolymer-decompression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.5", features = ["derive"]}
minimap2-paf-io = "1.0.0"
log = "0.4.17"
simplelog = "0.12.0"
crossbeam = "0.8.1"
serde = "1.0.139"
cbor = "0.4.1"